# belzakupki

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260504_0001_initial_schema.py
apps/api/: main.py
apps/worker/: main.py
apps/worker/src/worker/: __init__.py  cli.py  ingest.py  scoring.py
apps/worker/src/worker/sources/: __init__.py  goszakupki_by.py
