[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belzakupki"
version = "0.1.0"
description = "BelZakupki tender monitoring service (FastAPI + RQ + PostgreSQL + Redis)"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "beautifulsoup4",
  "lxml",
  "pydantic",
  "sqlalchemy",
  "psycopg[binary]",
  "alembic",
  "redis",
  "rq",
  "python-dotenv",
  "loguru",
]

[project.scripts]
belzakupki-seed = "worker.cli:seed"
belzakupki-ingest-goszakupki = "worker.cli:ingest_goszakupki"

[tool.setuptools.packages.find]
where = ["packages/db", "apps/worker/src"]
